# Proyecto-No1-EDD

./: CMakeLists.txt  README.md
documentacion/ArbolesGenerados/: ArbolBMasGrafica  ArbolBMasGrafica.dot
include/: controlador.h  mainwindow.h  pantallaagregar.h  pantallaarbolavl.h  pantallaarbolb.h  pantallaarbolbmas.h  pantallabuscarporcategoria.h  pantallabuscarpornombre.h  pantallabuscarrango.h  pantallaeliminarproducto.h  pantallalistarnombre.h  pantallaprincipal.h  pantallaverarboles.h
include/backend/: arbolavl.h  arbolb.h  arbolbmas.h  erroreslectura.h  gestorestructuras.h  listaenlazada.h  nodolista.h  producto.h
include/frontend/: controlador.h  pantallaagregar.h  pantallaarbolavl.h  pantallaarbolb.h  pantallaarbolbmas.h  pantallabuscarporcategoria.h  pantallabuscarpornombre.h  pantallabuscarrango.h  pantallaeliminarproducto.h  pantallaprincipal.h  pantallaverarboles.h
src/: controlador.cpp  mainwindow.cpp  pantallaagregar.cpp  pantallaarbolavl.cpp  pantallaarbolb.cpp  pantallaarbolbmas.cpp  pantallabuscarporcategoria.cpp  pantallabuscarpornombre.cpp  pantallabuscarrango.cpp  pantallacompararbusqueda.cpp  pantallaeliminarproducto.cpp  pantallalistarnombre.cpp  pantallaprincipal.cpp  pantallaverarboles.cpp
src/backend/: arbolavl.cpp  arbolb.cpp  arbolbmas.cpp  erroreslectura.cpp  gestorestructuras.cpp  listaenlazada.cpp  nodolista.cpp  producto.cpp
src/frontend/: controlador.cpp  graphicsviewzoom.cpp  mainwindow.cpp  pantallaagregar.cpp  pantallaarbolavl.cpp  pantallaarbolb.cpp  pantallaarbolbmas.cpp  pantallabuscarporcategoria.cpp  pantallabuscarpornombre.cpp  pantallabuscarrango.cpp  pantallaeliminarproducto.cpp  pantallalistarnombre.cpp  pantallaprincipal.cpp  pantallaverarboles.cpp
ui/: mainwindow.ui  pantallaagregar.ui  pantallaarbolavl.ui  pantallaarbolb.ui  pantallaarbolbmas.ui  pantallabuscarporcategoria.ui  pantallabuscarpornombre.ui  pantallabuscarrango.ui  pantallaeliminarproducto.ui  pantallalistarnombre.ui  pantallaprincipal.ui  pantallaverarboles.ui
